--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <p class="apps-p">App</p>
         </li>
         <li class="portfolio-list">
-          <img src="/images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
+          <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
             <h3 class="apps">Cashless Payment</h3>
               <p class="apps-p">Marketing</p>
         </li>
