--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                      <!--HEADER-->
   <header class="header">
     <nav class="nav-header">
-           
+      <a class="logo" href="./index.html">Web<span class="logo-style">Studio</span></a>
+      
       <ul class="nav-list-header">
-        <li class="nav-list"><a class="logo" href="./index.html">Web<span class="logo-style">Studio</span></a></li>
-        <li class="nav-list"><a class="nav-link" href="#Studio">Studio</a></li>
+        <li class="nav-list"><a class="nav-link" href="./index.html">Studio</a></li>
         <li class="nav-list"><a class="nav-link" href="#Portfolio">Portfolio</a></li>
         <li class="nav-list"><a class="nav-link" href="#Contacts">Contacts</a></li>
       </ul>
@@ -41,7 +41,7 @@
   <main class="main">
                      <!--BUTTON-->
     <section class="button-section">
-      <h1> Effective Solutions<br>
+      <h1 class="headline"> Effective Solutions<br>
       for Your Business</h1>
       <button class="butn" type="button">Order Service</button>
     </section>
