--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       
       <ul class="nav-list-header">
         <li class="nav-list"><a class="nav-link" href="./index.html">Studio</a></li>
-        <li class="nav-list"><a class="nav-link" href="#Portfolio">Portfolio</a></li>
-        <li class="nav-list"><a class="nav-link" href="#Contacts">Contacts</a></li>
+        <li class="nav-list"><a class="nav-link" href="">Portfolio</a></li>
+        <li class="nav-list"><a class="nav-link" href="">Contacts</a></li>
       </ul>
     </nav>
   
